CMAKE_MINIMUM_REQUIRED(VERSION 2.8) 

PROJECT(ACM)

SET(MINGW_HOME "D:/MinGW")
SET(MARIADB "D:/MariaDB 10.0")
SET(MAIN_DIR ${CMAKE_CURRENT_LIST_DIR})
SET(OUTPUT_DIR ${CMAKE_CURRENT_LIST_DIR}/Output)
SET(BIN_DIR ${CMAKE_CURRENT_LIST_DIR}/Bin)


INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/Code/Common/Control ${MINGW_HOME}/include ${MARIADB}/include)

LINK_DIRECTORIES(${MINGW_HOME}/lib ${MARIADB}/lib)

SET(CMAKE_CXX_FLAGS "-DBOOST_ALL_DYN_LINK -U__STRICT_ANSI__ -O0 -g3 -Wall -fmessage-length=0 -std=c++11")
SET(CMAKE_SHARED_LINKER_FLAGS "-Xlinker --enable-stdcall-fixup -Xlinker --kill-at")

SET(${PROJECT_NAME}_MAJOR_VERSION 0)
SET(${PROJECT_NAME}_MINOR_VERSION 1)
SET(${PROJECT_NAME}_PATCH_LEVEL 0)

ADD_SUBDIRECTORY(Code)

MESSAGE(STATUS "Source code directory: " ${PROJECT_SOURCE_DIR})
MESSAGE(STATUS "Build directory: " ${PROJECT_BINARY_DIR})