INSTALL(DIRECTORY config DESTINATION ${OUTPUT_DIR}/${MODULE_NAME})
INSTALL(DIRECTORY css DESTINATION ${OUTPUT_DIR}/${MODULE_NAME})
INSTALL(DIRECTORY images DESTINATION ${OUTPUT_DIR}/${MODULE_NAME})
INSTALL(DIRECTORY js DESTINATION ${OUTPUT_DIR}/${MODULE_NAME})
INSTALL(DIRECTORY page DESTINATION ${OUTPUT_DIR}/${MODULE_NAME})
